y.output
Terminals unused in grammar

   DOT


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: definition_or_statement
    2                 | translation_unit definition_or_statement

    3 definition_or_statement: function_definition
    4                        | statement

    5 type_specifier: BOOLEAN_T
    6               | INT_T
    7               | DOUBLE_T
    8               | STRING_T

    9 function_definition: type_specifier IDENTIFIER _LP_ parameter_list RP block
   10                    | type_specifier IDENTIFIER _LP_ RP block
   11                    | type_specifier IDENTIFIER _LP_ parameter_list RP SEMICOLON
   12                    | type_specifier IDENTIFIER _LP_ RP SEMICOLON

   13 parameter_list: parameter
   14               | parameter_list COMMA type_specifier IDENTIFIER

   15 parameter: type_specifier IDENTIFIER

   16 argument_list: assignment_expression
   17              | argument_list COMMA assignment_expression

   18 statement_list: statement
   19               | statement_list statement

   20 expression: assignment_expression
   21           | expression COMMA assignment_expression

   22 assignment_expression: logical_or_expression
   23                      | postfix_expression assignment_operator assignment_expression

   24 assignment_operator: ASSIGN_T
   25                    | ADD_ASSIGN_T
   26                    | SUB_ASSIGN_T
   27                    | MUL_ASSIGN_T
   28                    | DIV_ASSIGN_T
   29                    | MOD_ASSIGN_T

   30 logical_or_expression: logical_and_expression
   31                      | logical_or_expression LOGICAL_OR logical_and_expression

   32 logical_and_expression: equality_expression
   33                       | logical_and_expression LOGICAL_AND equality_expression

   34 equality_expression: relational_expression
   35                    | equality_expression EQ relational_expression
   36                    | equality_expression NE relational_expression

   37 relational_expression: additive_expression
   38                      | relational_expression GT additive_expression
   39                      | relational_expression GE additive_expression
   40                      | relational_expression LT additive_expression
   41                      | relational_expression LE additive_expression

   42 additive_expression: multiplicative_expression
   43                    | additive_expression ADD multiplicative_expression
   44                    | additive_expression SUB multiplicative_expression

   45 multiplicative_expression: unary_expression
   46                          | multiplicative_expression MUL unary_expression
   47                          | multiplicative_expression DIV unary_expression
   48                          | multiplicative_expression MOD unary_expression

   49 unary_expression: postfix_expression
   50                 | SUB unary_expression
   51                 | EXCLAMATION unary_expression

   52 postfix_expression: primary_expression
   53                   | postfix_expression _LP_ argument_list RP
   54                   | postfix_expression _LP_ RP
   55                   | postfix_expression INCREMENT
   56                   | postfix_expression DECREMENT

   57 primary_expression: _LP_ expression RP
   58                   | IDENTIFIER
   59                   | INT_LITERAL
   60                   | DOUBLE_LITERAL
   61                   | STRING_LITERAL
   62                   | REGEXP_LITERAL
   63                   | TRUE_T
   64                   | FALSE_T

   65 statement: expression SEMICOLON
   66          | if_statement
   67          | while_statement
   68          | for_statement
   69          | foreach_statement
   70          | return_statement
   71          | break_statement
   72          | continue_statement
   73          | try_statement
   74          | throw_statement
   75          | declaration_statement

   76 if_statement: IF _LP_ expression RP block
   77             | IF _LP_ expression RP block ELSE block
   78             | IF _LP_ expression RP block elsif_list
   79             | IF _LP_ expression RP block elsif_list ELSE block

   80 elsif_list: elsif
   81           | elsif_list elsif

   82 elsif: ELSIF _LP_ expression RP block

   83 label_opt: /* empty */
   84          | IDENTIFIER COLON

   85 while_statement: label_opt WHILE _LP_ expression RP block

   86 for_statement: label_opt FOR _LP_ expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP block

   87 foreach_statement: label_opt FOREACH _LP_ IDENTIFIER COLON expression RP block

   88 expression_opt: /* empty */
   89               | expression

   90 return_statement: RETURN_T expression_opt SEMICOLON

   91 identifier_opt: /* empty */
   92               | IDENTIFIER

   93 break_statement: BREAK identifier_opt SEMICOLON

   94 continue_statement: CONTINUE identifier_opt SEMICOLON

   95 try_statement: TRY block CATCH _LP_ IDENTIFIER RP block FINALLY block
   96              | TRY block FINALLY block
   97              | TRY block CATCH _LP_ IDENTIFIER RP block

   98 throw_statement: THROW expression SEMICOLON

   99 declaration_statement: type_specifier IDENTIFIER SEMICOLON
  100                      | type_specifier IDENTIFIER ASSIGN_T expression SEMICOLON

  101 @1: /* empty */

  102 block: LC @1 statement_list RC
  103      | LC RC


Terminals, with rules where they appear

$end (0) 0
error (256)
INT_LITERAL (258) 59
DOUBLE_LITERAL (259) 60
STRING_LITERAL (260) 61
REGEXP_LITERAL (261) 62
IDENTIFIER (262) 9 10 11 12 14 15 58 84 87 92 95 97 99 100
IF (263) 76 77 78 79
ELSE (264) 77 79
ELSIF (265) 82
WHILE (266) 85
FOR (267) 86
FOREACH (268) 87
RETURN_T (269) 90
BREAK (270) 93
CONTINUE (271) 94
_LP_ (272) 9 10 11 12 53 54 57 76 77 78 79 82 85 86 87 95 97
RP (273) 9 10 11 12 53 54 57 76 77 78 79 82 85 86 87 95 97
LC (274) 102 103
RC (275) 102 103
SEMICOLON (276) 11 12 65 86 90 93 94 98 99 100
COLON (277) 84 87
COMMA (278) 14 17 21
ASSIGN_T (279) 24 100
LOGICAL_AND (280) 33
LOGICAL_OR (281) 31
EQ (282) 35
NE (283) 36
GT (284) 38
GE (285) 39
LT (286) 40
LE (287) 41
ADD (288) 43
SUB (289) 44 50
MUL (290) 46
DIV (291) 47
MOD (292) 48
TRUE_T (293) 63
FALSE_T (294) 64
EXCLAMATION (295) 51
DOT (296)
ADD_ASSIGN_T (297) 25
SUB_ASSIGN_T (298) 26
MUL_ASSIGN_T (299) 27
DIV_ASSIGN_T (300) 28
MOD_ASSIGN_T (301) 29
INCREMENT (302) 55
DECREMENT (303) 56
TRY (304) 95 96 97
CATCH (305) 95 97
FINALLY (306) 95 96
THROW (307) 98
BOOLEAN_T (308) 5
INT_T (309) 6
DOUBLE_T (310) 7
STRING_T (311) 8


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
translation_unit (58)
    on left: 1 2, on right: 0 2
definition_or_statement (59)
    on left: 3 4, on right: 1 2
type_specifier (60)
    on left: 5 6 7 8, on right: 9 10 11 12 14 15 99 100
function_definition (61)
    on left: 9 10 11 12, on right: 3
parameter_list (62)
    on left: 13 14, on right: 9 11 14
parameter (63)
    on left: 15, on right: 13
argument_list (64)
    on left: 16 17, on right: 17 53
statement_list (65)
    on left: 18 19, on right: 19 102
expression (66)
    on left: 20 21, on right: 21 57 65 76 77 78 79 82 85 87 89 98 100
assignment_expression (67)
    on left: 22 23, on right: 16 17 20 21 23
assignment_operator (68)
    on left: 24 25 26 27 28 29, on right: 23
logical_or_expression (69)
    on left: 30 31, on right: 22 31
logical_and_expression (70)
    on left: 32 33, on right: 30 31 33
equality_expression (71)
    on left: 34 35 36, on right: 32 33 35 36
relational_expression (72)
    on left: 37 38 39 40 41, on right: 34 35 36 38 39 40 41
additive_expression (73)
    on left: 42 43 44, on right: 37 38 39 40 41 43 44
multiplicative_expression (74)
    on left: 45 46 47 48, on right: 42 43 44 46 47 48
unary_expression (75)
    on left: 49 50 51, on right: 45 46 47 48 50 51
postfix_expression (76)
    on left: 52 53 54 55 56, on right: 23 49 53 54 55 56
primary_expression (77)
    on left: 57 58 59 60 61 62 63 64, on right: 52
statement (78)
    on left: 65 66 67 68 69 70 71 72 73 74 75, on right: 4 18 19
if_statement (79)
    on left: 76 77 78 79, on right: 66
elsif_list (80)
    on left: 80 81, on right: 78 79 81
elsif (81)
    on left: 82, on right: 80 81
label_opt (82)
    on left: 83 84, on right: 85 86 87
while_statement (83)
    on left: 85, on right: 67
for_statement (84)
    on left: 86, on right: 68
foreach_statement (85)
    on left: 87, on right: 69
expression_opt (86)
    on left: 88 89, on right: 86 90
return_statement (87)
    on left: 90, on right: 70
identifier_opt (88)
    on left: 91 92, on right: 93 94
break_statement (89)
    on left: 93, on right: 71
continue_statement (90)
    on left: 94, on right: 72
try_statement (91)
    on left: 95 96 97, on right: 73
throw_statement (92)
    on left: 98, on right: 74
declaration_statement (93)
    on left: 99 100, on right: 75
block (94)
    on left: 102 103, on right: 9 10 76 77 78 79 82 85 86 87 95 96
    97
@1 (95)
    on left: 101, on right: 102


state 0

    0 $accept: . translation_unit $end

    INT_LITERAL     shift, and go to state 1
    DOUBLE_LITERAL  shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    REGEXP_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    IF              shift, and go to state 6
    RETURN_T        shift, and go to state 7
    BREAK           shift, and go to state 8
    CONTINUE        shift, and go to state 9
    _LP_            shift, and go to state 10
    SUB             shift, and go to state 11
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    EXCLAMATION     shift, and go to state 14
    TRY             shift, and go to state 15
    THROW           shift, and go to state 16
    BOOLEAN_T       shift, and go to state 17
    INT_T           shift, and go to state 18
    DOUBLE_T        shift, and go to state 19
    STRING_T        shift, and go to state 20

    $default  reduce using rule 83 (label_opt)

    translation_unit           go to state 21
    definition_or_statement    go to state 22
    type_specifier             go to state 23
    function_definition        go to state 24
    expression                 go to state 25
    assignment_expression      go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    postfix_expression         go to state 34
    primary_expression         go to state 35
    statement                  go to state 36
    if_statement               go to state 37
    label_opt                  go to state 38
    while_statement            go to state 39
    for_statement              go to state 40
    foreach_statement          go to state 41
    return_statement           go to state 42
    break_statement            go to state 43
    continue_statement         go to state 44
    try_statement              go to state 45
    throw_statement            go to state 46
    declaration_statement      go to state 47


state 1

   59 primary_expression: INT_LITERAL .

    $default  reduce using rule 59 (primary_expression)


state 2

   60 primary_expression: DOUBLE_LITERAL .

    $default  reduce using rule 60 (primary_expression)


state 3

   61 primary_expression: STRING_LITERAL .

    $default  reduce using rule 61 (primary_expression)


state 4

   62 primary_expression: REGEXP_LITERAL .

    $default  reduce using rule 62 (primary_expression)


state 5

   58 primary_expression: IDENTIFIER .
   84 label_opt: IDENTIFIER . COLON

    COLON  shift, and go to state 48

    $default  reduce using rule 58 (primary_expression)


state 6

   76 if_statement: IF . _LP_ expression RP block
   77             | IF . _LP_ expression RP block ELSE block
   78             | IF . _LP_ expression RP block elsif_list
   79             | IF . _LP_ expression RP block elsif_list ELSE block

    _LP_  shift, and go to state 49


state 7

   90 return_statement: RETURN_T . expression_opt SEMICOLON

    INT_LITERAL     shift, and go to state 1
    DOUBLE_LITERAL  shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    REGEXP_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 50
    _LP_            shift, and go to state 10
    SUB             shift, and go to state 11
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    EXCLAMATION     shift, and go to state 14

    $default  reduce using rule 88 (expression_opt)

    expression                 go to state 51
    assignment_expression      go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    postfix_expression         go to state 34
    primary_expression         go to state 35
    expression_opt             go to state 52


state 8

   93 break_statement: BREAK . identifier_opt SEMICOLON

    IDENTIFIER  shift, and go to state 53

    $default  reduce using rule 91 (identifier_opt)

    identifier_opt  go to state 54


state 9

   94 continue_statement: CONTINUE . identifier_opt SEMICOLON

    IDENTIFIER  shift, and go to state 53

    $default  reduce using rule 91 (identifier_opt)

    identifier_opt  go to state 55


state 10

   57 primary_expression: _LP_ . expression RP

    INT_LITERAL     shift, and go to state 1
    DOUBLE_LITERAL  shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    REGEXP_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 50
    _LP_            shift, and go to state 10
    SUB             shift, and go to state 11
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    EXCLAMATION     shift, and go to state 14

    expression                 go to state 56
    assignment_expression      go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    postfix_expression         go to state 34
    primary_expression         go to state 35


state 11

   50 unary_expression: SUB . unary_expression

    INT_LITERAL     shift, and go to state 1
    DOUBLE_LITERAL  shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    REGEXP_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 50
    _LP_            shift, and go to state 10
    SUB             shift, and go to state 11
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    EXCLAMATION     shift, and go to state 14

    unary_expression    go to state 57
    postfix_expression  go to state 58
    primary_expression  go to state 35


state 12

   63 primary_expression: TRUE_T .

    $default  reduce using rule 63 (primary_expression)


state 13

   64 primary_expression: FALSE_T .

    $default  reduce using rule 64 (primary_expression)


state 14

   51 unary_expression: EXCLAMATION . unary_expression

    INT_LITERAL     shift, and go to state 1
    DOUBLE_LITERAL  shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    REGEXP_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 50
    _LP_            shift, and go to state 10
    SUB             shift, and go to state 11
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    EXCLAMATION     shift, and go to state 14

    unary_expression    go to state 59
    postfix_expression  go to state 58
    primary_expression  go to state 35


state 15

   95 try_statement: TRY . block CATCH _LP_ IDENTIFIER RP block FINALLY block
   96              | TRY . block FINALLY block
   97              | TRY . block CATCH _LP_ IDENTIFIER RP block

    LC  shift, and go to state 60

    block  go to state 61


state 16

   98 throw_statement: THROW . expression SEMICOLON

    INT_LITERAL     shift, and go to state 1
    DOUBLE_LITERAL  shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    REGEXP_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 50
    _LP_            shift, and go to state 10
    SUB             shift, and go to state 11
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    EXCLAMATION     shift, and go to state 14

    expression                 go to state 62
    assignment_expression      go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    postfix_expression         go to state 34
    primary_expression         go to state 35


state 17

    5 type_specifier: BOOLEAN_T .

    $default  reduce using rule 5 (type_specifier)


state 18

    6 type_specifier: INT_T .

    $default  reduce using rule 6 (type_specifier)


state 19

    7 type_specifier: DOUBLE_T .

    $default  reduce using rule 7 (type_specifier)


state 20

    8 type_specifier: STRING_T .

    $default  reduce using rule 8 (type_specifier)


state 21

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . definition_or_statement

    $end            shift, and go to state 63
    INT_LITERAL     shift, and go to state 1
    DOUBLE_LITERAL  shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    REGEXP_LITERAL  shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    IF              shift, and go to state 6
    RETURN_T        shift, and go to state 7
    BREAK           shift, and go to state 8
    CONTINUE        shift, and go to state 9
    _LP_            shift, and go to state 10
    SUB             shift, and go to state 11
    TRUE_T          shift, and go to state 12
    FALSE_T         shift, and go to state 13
    EXCLAMATION     shift, and go to state 14
    TRY             shift, and go to state 15
    THROW           shift, and go to state 16
    BOOLEAN_T       shift, and go to state 17
    INT_T           shift, and go to state 18
    DOUBLE_T        shift, and go to state 19
    STRING_T        shift, and go to state 20

    $default  reduce using rule 83 (label_opt)

    definition_or_statement    go to state 64
    type_specifier             go to state 23
    function_definition        go to state 24
    expression                 go to state 25
    assignment_expression      go to state 26
    logical_or_expression      go to state 27
    logical_and_expression     go to state 28
    equality_expression        go to state 29
    relational_expression      go to state 30
    additive_expression        go to state 31
    multiplicative_expression  go to state 32
    unary_expression           go to state 33
    postfix_expression         go to state 34
    primary_expression         go to state 35
    statement                  go to state 36
    if_statement               go to state 37
    label_opt                  go to state 38
    while_statement            go to state 39
    for_statement              go to state 40
    foreach_statement          go to state 41
    return_statement           go to state 42
    break_statement            go to state 43
    continue_statement         go to state 44
    try_statement              go to state 45
    throw_statement            go to state 46
    declaration_statement      go to state 47


state 22

    1 translation_unit: definition_or_statement .

    $default  reduce using rule 1 (translation_unit)


state 23

    9 function_definition: type_specifier . IDENTIFIER _LP_ parameter_list RP block
   10                    | type_specifier . IDENTIFIER _LP_ RP block
   11                    | type_specifier . IDENTIFIER _LP_ parameter_list RP SEMICOLON
   12                    | type_specifier . IDENTIFIER _LP_ RP SEMICOLON
   99 declaration_statement: type_specifier . IDENTIFIER SEMICOLON
  100                      | type_specifier . IDENTIFIER ASSIGN_T expression SEMICOLON

    IDENTIFIER  shift, and go to state 65


state 24

    3 definition_or_statement: function_definition .

    $default  reduce using rule 3 (definition_or_statement)


state 25

   21 expression: expression . COMMA assignment_expression
   65 statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 66
    COMMA      shift, and go to state 67


state 26

   20 expression: assignment_expression .

    $default  reduce using rule 20 (expression)


state 27

   22 assignment_expression: logical_or_expression .
   31 logical_or_expression: logical_or_expression . LOGICAL_OR logical_and_expression

    LOGICAL_OR  shift, and go to state 68

    $default  reduce using rule 22 (assignment_expression)


state 28

   30 logical_or_expression: logical_and_expression .
   33 logical_and_expression: logical_and_expression . LOGICAL_AND equality_expression

    LOGICAL_AND  shift, and go to state 69

    $default  reduce using rule 30 (logical_or_expression)


state 29

   32 logical_and_expression: equality_expression .
   35 equality_expression: equality_expression . EQ relational_expression
   36                    | equality_expression . NE relational_expression

    EQ  shift, and go to state 70
    NE  shift, and go to state 71

    $default  reduce using rule 32 (logical_and_expression)


state 30

   34 equality_expression: relational_expression .
   38 relational_expression: relational_expression . GT additive_expression
   39                      | relational_expression . GE additive_expression
   40                      | relational_expression . LT additive_expression
   41                      | relational_expression . LE additive_expression

    GT  shift, and go to state 72
    GE  shift, and go to state 73
    LT  shift, and go to state 74
    LE  shift, and go to state 75

    $default  reduce using rule 34 (equality_expression)


state 31

   37 relational_expression: additive_expression .
   43 additive_expression: additive_expression . ADD multiplicative_expression
   44                    | additive_expression . SUB multiplicative_expression

    ADD  shift, and go to state 76
    SUB  shift, and go to state 77

    $default  reduce using rule 37 (relational_expression)


state 32

   42 additive_expression: multiplicative_expression .
   46 multiplicative_expression: multiplicative_expression . MUL unary_expression
   47                          | multiplicative_expression . DIV unary_expression
   48                          | multiplicative_expression . MOD unary_expression

    MUL  shift, and go to state 78
    DIV  shift, and go to state 79
    MOD  shift, and go to state 80

    $default  reduce using rule 42 (additive_expression)


state 33

   45 multiplicative_expression: unary_expression .

    $default  reduce using rule 45 (multiplicative_expression)


state 34

   23 assignment_expression: postfix_expression . assignment_operator assignment_expression
   49 unary_expression: postfix_expression .
   53 postfix_expression: postfix_expression . _LP_ argument_list RP
   54                   | postfix_expression . _LP_ RP
   55                   | postfix_expression . INCREMENT
   56                   | postfix_expression . DECREMENT

    _LP_          shift, and go to state 81
    ASSIGN_T      shift, and go to state 82
    ADD_ASSIGN_T  shift, and go to state 83
    SUB_ASSIGN_T  shift, and go to state 84
    MUL_ASSIGN_T  shift, and go to state 85
    DIV_ASSIGN_T  shift, and go to state 86
    MOD_ASSIGN_T  shift, and go to state 87
    INCREMENT     shift, and go to state 88
    DECREMENT     shift, and go to state 89

    $default  reduce using rule 49 (unary_expression)

    assignment_operator  go to state 90


state 35

   52 postfix_expression: primary_expression .

    $default  reduce using rule 52 (postfix_expression)


state 36

    4 definition_or_statement: statement .

    $default  reduce using rule 4 (definition_or_statement)


state 37

   66 statement: if_statement .

    $default  reduce using rule 66 (statement)


state 38

   85 while_statement: label_opt . WHILE _LP_ expression RP block
   86 for_statement: label_opt . FOR _LP_ expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RP block
   87 foreach_statement: label_opt . FOREACH _LP_ IDENTIFIER COLON expression RP block

    WHILE    shift, and go to state 91
    FOR      shift, and go to state 92
    FOREACH  shift, and go to state 93


state 39

   67 statement: while_statement .

    $default  reduce using rule 67 (statement)


state 40

   68 statement: for_statement .
